[project]
name = "value-oriented-flow"
version = "0.1.0"
description = "Value-oriented flow matching experiments with a modern online Mujoco pipeline."
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy<2",
    "scipy",
    "torch",
    "fire",
    "termcolor",
    "wandb>=0.22.3",
    "gymnasium[mujoco]>=1.0.0",
    "h5py",
]

[project.optional-dependencies]
offline-d4rl = [
    "gym==0.23.1",
    "d4rl",
    "mujoco-py>=2.1,<2.2",
]

[tool.uv]
default-groups = []
